# mnist_project

./: .gitignore  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
configs/: sweep.yaml
dockerfiles/: evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth  test_model.pth
src/ml_ops/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py  test_model.py  test_trainning.py
